// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer has project root info 1`] = `

<div>
  <div class="grid grid-cols-7 gap-4 py-2 border-b">
    <gui-logo classname="col-span-2 p-8">
    </gui-logo>
    <div class="col-span-5 relative pt-6 pb-1">
      <gui-title classname="mt-2 -ml-24 pr-2 absolute">
        Explore
      </gui-title>
      <div class="flex">
        <gui-search-bar>
        </gui-search-bar>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 w-10"
          type="button"
          id="radix-:r2:"
          aria-haspopup="menu"
          aria-expanded="false"
          data-state="closed"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="24"
            height="24"
            viewbox="0 0 24 24"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            stroke-linecap="round"
            stroke-linejoin="round"
            class="lucide lucide-sun h-[1.2rem] w-[1.2rem] rotate-0 scale-100 transition-all dark:-rotate-90 dark:scale-0"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            >
            </circle>
            <path d="M12 2v2">
            </path>
            <path d="M12 20v2">
            </path>
            <path d="m4.93 4.93 1.41 1.41">
            </path>
            <path d="m17.66 17.66 1.41 1.41">
            </path>
            <path d="M2 12h2">
            </path>
            <path d="M20 12h2">
            </path>
            <path d="m6.34 17.66-1.41 1.41">
            </path>
            <path d="m19.07 4.93-1.41 1.41">
            </path>
          </svg>
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="24"
            height="24"
            viewbox="0 0 24 24"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            stroke-linecap="round"
            stroke-linejoin="round"
            class="lucide lucide-moon absolute h-[1.2rem] w-[1.2rem] rotate-90 scale-0 transition-all dark:rotate-0 dark:scale-100"
          >
            <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z">
            </path>
          </svg>
          <span class="sr-only">
            Toggle theme
          </span>
        </button>
      </div>
      <div class="text-xs text-gray-500 mt-2 absolute border border-solid rounded-bl-sm rounded-br-sm z-0 py-1 px-3 top-full right-0 w-auto text-right">
        Context: /path/to/project
      </div>
    </div>
  </div>
  <gui-explorer-grid>
  </gui-explorer-grid>
</div>

`;

exports[`render default 1`] = `

<div>
  <div class="grid grid-cols-7 gap-4 py-2 border-b">
    <gui-logo classname="col-span-2 p-8">
    </gui-logo>
    <div class="col-span-5 relative pt-6 pb-1">
      <gui-title classname="mt-2 -ml-24 pr-2 absolute">
        Explore
      </gui-title>
      <div class="flex">
        <gui-search-bar>
        </gui-search-bar>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 w-10"
          type="button"
          id="radix-:r0:"
          aria-haspopup="menu"
          aria-expanded="false"
          data-state="closed"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="24"
            height="24"
            viewbox="0 0 24 24"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            stroke-linecap="round"
            stroke-linejoin="round"
            class="lucide lucide-sun h-[1.2rem] w-[1.2rem] rotate-0 scale-100 transition-all dark:-rotate-90 dark:scale-0"
          >
            <circle
              cx="12"
              cy="12"
              r="4"
            >
            </circle>
            <path d="M12 2v2">
            </path>
            <path d="M12 20v2">
            </path>
            <path d="m4.93 4.93 1.41 1.41">
            </path>
            <path d="m17.66 17.66 1.41 1.41">
            </path>
            <path d="M2 12h2">
            </path>
            <path d="M20 12h2">
            </path>
            <path d="m6.34 17.66-1.41 1.41">
            </path>
            <path d="m19.07 4.93-1.41 1.41">
            </path>
          </svg>
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="24"
            height="24"
            viewbox="0 0 24 24"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            stroke-linecap="round"
            stroke-linejoin="round"
            class="lucide lucide-moon absolute h-[1.2rem] w-[1.2rem] rotate-90 scale-0 transition-all dark:rotate-0 dark:scale-100"
          >
            <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z">
            </path>
          </svg>
          <span class="sr-only">
            Toggle theme
          </span>
        </button>
      </div>
    </div>
  </div>
  <gui-explorer-grid>
  </gui-explorer-grid>
</div>

`;
